--- a/index.html
+++ b/index.html
@@ -6,5 +6,61 @@
   </head>
   <body>
 
+    <div class="banner">
+      <h1>Broadway Design</h1>
+      <nav>
+          <p><a href="#">Home</a></p>
+          <p><a href="#">Process</a></p>
+          <p><a href="#">Work</a></p>
+          <p><a href="#">Team</a></p>
+          <p><a href="#">Contact</a></p>
+      </nav>
+    </div>
+
+    <div class="process">
+      <h2>Our Process</h2>
+      <p><img src="" alt=""></p>
+      <h3>Identify</h3>
+      <p>We focus on the most important details</p>
+
+      <img src="" alt="">
+      <h3>Understand</h3>
+      <p>We study our projects inside and out.</p>
+
+      <img src="" alt="">
+      <h3>Execute</h3>
+      <p>We put everything we have into our work.</p>
+    </div>
+
+    <div class="banner">
+      <h3>Designed In New York</h3>
+    </div>
+
+    <div class="info">
+      <h3>Portfolio</h3>
+      <p>Coming Soon</p>
+
+      <h3>Team</h3>
+      <p>We're Hiring!</p>
+
+      <h3>Contact</h3>
+      <p>Phone: (555)-555-5555</p>
+      <p>E-mail: test@example.com</p>
+      <p>Twitter: @test</p>
+
+    </div>
+
+    <div class="footer">
+      <p>&copy; Broadway 2016
+        <nav>
+          <a href="#">Home</a>
+          <a href="#">About</a>
+          <a href="#">Work</a>
+          <a href="#">Team</a>
+          <a href="#">Contact</a>
+        </nav>
+      </p>
+    </div>
+
   </body>
 </html>
