troubleshoot gitpages css

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Broadway</title>
-    <link type="text/css" rel="stylesheet" href="resources/css/index.css">
+    <link rel="stylesheet" type="text/css" href="resources/css/index.css">
   </head>
   <body>
 
