--- a/index.html
+++ b/index.html
@@ -17,15 +17,15 @@
 
     <div class="process">
       <h2>Our Process</h2>
-      <p><img src="" alt=""></p>
+      <p><img src="resources/images/identify.svg" alt=""></p>
       <h3>Identify</h3>
       <p>We focus on the most important details</p>
 
-      <img src="" alt="">
+      <img src="resources/images/understand.svg" alt="">
       <h3>Understand</h3>
       <p>We study our projects inside and out.</p>
 
-      <img src="" alt="">
+      <img src="resources/images/execute.svg" alt="">
       <h3>Execute</h3>
       <p>We put everything we have into our work.</p>
     </div>
@@ -49,7 +49,7 @@
     </div>
 
     <div class="footer">
-      <p>&copy; Broadway 2016
+      <p><span id="copy">&copy; Broadway 2016</span>
       <a href="#">Home</a>
       <a href="#">About</a>
       <a href="#">Work</a>
